--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,30 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ConversacionesJLLM
 excludes=
 file.reference.biblioteca11.jar=C:\\Users\\Alvaro\\Desktop\\biblioteca11.jar
+file.reference.Desktop-jackson-core-2.17=C:\\Users\\Alvaro\\Desktop\\jackson-core-2.17
+file.reference.Desktop-jackson-dataformat-xml-2.17=C:\\Users\\Alvaro\\Desktop\\jackson-dataformat-xml-2.17
+file.reference.Desktop-jackson-master=C:\\Users\\Alvaro\\Desktop\\jackson-master
+file.reference.Desktop-stax2-api-master=C:\\Users\\Alvaro\\Desktop\\stax2-api-master
+file.reference.gson-2.10.1.jar=C:\\Users\\Alvaro\\Desktop\\gson-2.10.1.jar
+file.reference.jackson-annotations-2.15.3.jar=C:\\Users\\Alvaro\\Desktop\\jackson-annotations-2.15.3.jar
+file.reference.jackson-core-2.15.3.jar=C:\\Users\\Alvaro\\Desktop\\jackson-core-2.15.3.jar
+file.reference.jackson-databind-2.15.3.jar=C:\\Users\\Alvaro\\Desktop\\jackson-databind-2.15.3.jar
+file.reference.jackson-dataformat-xml-2.15.3.jar=C:\\Users\\Alvaro\\Desktop\\jackson-dataformat-xml-2.15.3.jar
+file.reference.stax2-api-4.0.0.jar=C:\\Users\\Alvaro\\Desktop\\stax2-api-4.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.biblioteca11.jar}
+    ${file.reference.biblioteca11.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.Desktop-jackson-core-2.17}:\
+    ${file.reference.Desktop-jackson-dataformat-xml-2.17}:\
+    ${file.reference.Desktop-jackson-master}:\
+    ${file.reference.Desktop-stax2-api-master}:\
+    ${file.reference.jackson-annotations-2.15.3.jar}:\
+    ${file.reference.jackson-core-2.15.3.jar}:\
+    ${file.reference.jackson-databind-2.15.3.jar}:\
+    ${file.reference.jackson-dataformat-xml-2.15.3.jar}:\
+    ${file.reference.stax2-api-4.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
