--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ConversacionesJLLM
+application.vendor=Alvaro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,32 +33,27 @@ dist.jar=${dist.dir}/ConversacionesJLLM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ConversacionesJLLM
+endorsed.classpath=
 excludes=
-file.reference.biblioteca11.jar=C:\\Users\\Alvaro\\Desktop\\biblioteca11.jar
-file.reference.Desktop-jackson-core-2.17=C:\\Users\\Alvaro\\Desktop\\jackson-core-2.17
-file.reference.Desktop-jackson-dataformat-xml-2.17=C:\\Users\\Alvaro\\Desktop\\jackson-dataformat-xml-2.17
-file.reference.Desktop-jackson-master=C:\\Users\\Alvaro\\Desktop\\jackson-master
-file.reference.Desktop-stax2-api-master=C:\\Users\\Alvaro\\Desktop\\stax2-api-master
-file.reference.gson-2.10.1.jar=C:\\Users\\Alvaro\\Desktop\\gson-2.10.1.jar
-file.reference.jackson-annotations-2.15.3.jar=C:\\Users\\Alvaro\\Desktop\\jackson-annotations-2.15.3.jar
-file.reference.jackson-core-2.15.3.jar=C:\\Users\\Alvaro\\Desktop\\jackson-core-2.15.3.jar
-file.reference.jackson-databind-2.15.3.jar=C:\\Users\\Alvaro\\Desktop\\jackson-databind-2.15.3.jar
-file.reference.jackson-dataformat-xml-2.15.3.jar=C:\\Users\\Alvaro\\Desktop\\jackson-dataformat-xml-2.15.3.jar
-file.reference.stax2-api-4.0.0.jar=C:\\Users\\Alvaro\\Desktop\\stax2-api-4.0.0.jar
+file.reference.biblioteca11.jar-1=lib\\biblioteca11.jar
+file.reference.ConversacionesJLLM-lib=lib
+file.reference.gson-2.10.1.jar-1=lib\\gson-2.10.1.jar
+file.reference.jackson-annotations-2.15.3.jar-1=lib\\jackson-annotations-2.15.3.jar
+file.reference.jackson-core-2.15.3.jar-1=lib\\jackson-core-2.15.3.jar
+file.reference.jackson-databind-2.15.3.jar-1=lib\\jackson-databind-2.15.3.jar
+file.reference.jackson-dataformat-xml-2.15.3.jar-1=lib\\jackson-dataformat-xml-2.15.3.jar
+file.reference.stax2-api-4.0.0.jar-1=lib\\stax2-api-4.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.biblioteca11.jar}:\
-    ${file.reference.gson-2.10.1.jar}:\
-    ${file.reference.Desktop-jackson-core-2.17}:\
-    ${file.reference.Desktop-jackson-dataformat-xml-2.17}:\
-    ${file.reference.Desktop-jackson-master}:\
-    ${file.reference.Desktop-stax2-api-master}:\
-    ${file.reference.jackson-annotations-2.15.3.jar}:\
-    ${file.reference.jackson-core-2.15.3.jar}:\
-    ${file.reference.jackson-databind-2.15.3.jar}:\
-    ${file.reference.jackson-dataformat-xml-2.15.3.jar}:\
-    ${file.reference.stax2-api-4.0.0.jar}
+    ${file.reference.ConversacionesJLLM-lib}:\
+    ${file.reference.biblioteca11.jar-1}:\
+    ${file.reference.gson-2.10.1.jar-1}:\
+    ${file.reference.jackson-annotations-2.15.3.jar-1}:\
+    ${file.reference.jackson-core-2.15.3.jar-1}:\
+    ${file.reference.jackson-databind-2.15.3.jar-1}:\
+    ${file.reference.jackson-dataformat-xml-2.15.3.jar-1}:\
+    ${file.reference.stax2-api-4.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
